--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
       <h2>Add a Todo</h2>
       <form action="/" method="POST">
         <div class="mb-3">
-          <label for="title" class="form-label">Todo Title</label>
+          <label for="title" class="form-label my-3">Todo Title</label>
           <input type="text" class="form-control" name="title" id="title" aria-describedby="emailHelp">
           
         <div class="mb-3">
-          <label for="desc" class="form-label">Todo Description</label>
+          <label for="desc" class="form-label my-3">Todo Description</label>
           <input type="text" class="form-control" name="desc" id="desc">
         </div>
         
