--- a/templates/update.html
+++ b/templates/update.html
@@ -7,11 +7,11 @@
       <h2>Update Your Todo</h2>
       <form action="/update/{{todo.sno}}" method="POST">
         <div class="mb-3">
-          <label for="title" class="form-label">Todo Title</label>
+          <label for="title" class="form-label my-3">Todo Title</label>
           <input type="text" class="form-control" name="title" value="{{todo.title}}" id="title" aria-describedby="emailHelp">
           
         <div class="mb-3">
-          <label for="desc" class="form-label">Todo Description</label>
+          <label for="desc" class="form-label my-3">Todo Description</label>
           <input type="text" class="form-control" value="{{todo.desc}}" name="desc" id="desc">
         </div>
         
