--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,17 @@
         </div>
       </nav>
     </div>
+    
       
 {% block body %}
   
 {% endblock body %}
+
+<footer>
+  <div class="container">
+    <p class="my-100" style="text-align: center;">&copy; 2022 Copyright&nbsp; Created by Shabbirali</p>
+  </div>
+</footer>
+  
 </body>
 </html>
